--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header>
-            <h1>ServiceDesk 1.0 - Заголовок</h1>
+            <p>ServiceDesk 1.0</p>
         </header>
         <main>
             <h2>Main</h2>
