Создание панелию меню и рабочей области

--- a/client/index.html
+++ b/client/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>ServiceDesk 1.0</title>
-        <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
-    </head>
-    <body>
-        <header>
-            <p>ServiceDesk 1.0</p>
-        </header>
-        <main>
-            <h2>Main</h2>
-        </main>
-        <footer>
-            <h3>Footer</h3>
-        </footer>
-    </body>
+
+<head>
+    <title>ServiceDesk 1.0</title>
+    <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+</head>
+
+<body>
+    <header>
+        <p>ServiceDesk 1.0</p>
+    </header>
+    <main>
+        <div class="leftPanel">
+            <p>Меню</p>
+        </div>
+        <div class="workPanel">
+            <p>Основная рабочая панель</p>
+        </div>
+    </main>
+    <footer>
+        <h3>Подвал</h3>
+    </footer>
+</body>
+
 </html>
