Добавление панели Подвал

--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,9 @@
         </div>
     </main>
     <footer>
-        <h3>Подвал</h3>
+        <div class="statusPanel">
+            <p>Панель статуса. Информационная Панель</p>
+        </div>
     </footer>
 </body>
 
