leftPanel Создание разделов меню

--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,23 @@
     </header>
     <main>
         <div class="leftPanel">
-            <p>Меню</p>
+            <ul>
+                <li>
+                    <a href="">Заявки</a>
+                </li>
+                <li>
+                    <a href="">Активы</a>
+                </li>
+                <li>
+                    <a href="">Пользователи</a>
+                </li>
+                <li>
+                    <a href="">Поставщики</a>
+                </li>
+                <li>
+                    <a href="">Почта</a>
+                </li>
+            </ul>
         </div>
         <div class="workPanel">
             <p>Основная рабочая панель</p>
@@ -22,7 +38,7 @@
         <div class="statusPanel">
             <p>Панель статуса. Информационная Панель</p>
         </div>
-    </footer>
+     </footer>
 </body>
 
 </html>
