leftPanel Проработка панели меню

--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>ServiceDesk 1.0</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+    <link rel="stylesheet" href="fonts/leftPanel/styleicon.css">
 </head>
 
 <body>
@@ -14,19 +15,22 @@
         <div class="leftPanel">
             <ul>
                 <li>
-                    <a href="">Заявки</a>
+                    <a href=""><span class="icon-files-empty"></span>Заявки</a>
                 </li>
                 <li>
-                    <a href="">Активы</a>
+                    <a href=""><span class="icon-database"></span>Активы</a>
                 </li>
                 <li>
-                    <a href="">Пользователи</a>
+                    <a href=""><span class="icon-users"></span>Пользователи</a>
                 </li>
                 <li>
-                    <a href="">Поставщики</a>
+                    <a href=""><span class="icon-truck"></span>Поставщики</a>
                 </li>
                 <li>
-                    <a href="">Почта</a>
+                    <a href=""><span class="icon-envelope"></span>Почта</a>
+                </li>
+                <li>
+                    <a href=""><span class="icon-stats-dots"></span>Отчёты</a>
                 </li>
             </ul>
         </div>
