leftPanel Переработка панели меню

--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>ServiceDesk 1.0</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/leftPanel.css">
     <link rel="stylesheet" href="fonts/leftPanel/styleicon.css">
 </head>
 
@@ -16,21 +17,36 @@
             <ul>
                 <li>
                     <a href=""><span class="icon-files-empty"></span>Заявки</a>
+                    <ul>
+                        <li><a href="">Все</a></li>
+                        <li><a href="">Мои</a></li>
+                    </ul>
                 </li>
                 <li>
                     <a href=""><span class="icon-database"></span>Активы</a>
+                    <ul>
+                        <li><a href="">Все</a></li>
+                        <li><a href="">Списание</a></li>
+                    </ul>
                 </li>
                 <li>
                     <a href=""><span class="icon-users"></span>Пользователи</a>
                 </li>
                 <li>
                     <a href=""><span class="icon-truck"></span>Поставщики</a>
+                    <ul>
+                        <li><a href="">Контрагенты</a></li>
+                        <li><a href="">Контактные лица</a></li>
+                    </ul>
                 </li>
                 <li>
                     <a href=""><span class="icon-envelope"></span>Почта</a>
                 </li>
                 <li>
                     <a href=""><span class="icon-stats-dots"></span>Отчёты</a>
+                    <ul>
+                        <li><a href="">График заявок</a></li>
+                    </ul>
                 </li>
             </ul>
         </div>
@@ -42,7 +58,7 @@
         <div class="statusPanel">
             <p>Панель статуса. Информационная Панель</p>
         </div>
-     </footer>
+    </footer>
 </body>
 
 </html>
