--- a/client/index.html
+++ b/client/index.html
@@ -51,14 +51,17 @@
             </ul>
         </div>
         <div class="workPanel">
-            <p>Основная рабочая панель</p>
+            <ul>
+            </ul>
         </div>
     </main>
     <footer>
-        <div class="statusPanel">
+        <!-- <div class="statusPanel">
             <p>Панель статуса. Информационная Панель</p>
-        </div>
+        </div> -->
     </footer>
+    <script src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="javascripts/app.js"></script>    
 </body>
 
 </html>
