Работа client-server через файл orders.json

--- a/client/index.html
+++ b/client/index.html
@@ -50,8 +50,11 @@
                 </li>
             </ul>
         </div>
+        <div class="activePanel">
+            <button class="addOrder">Добавить заявку</button>
+        </div>
         <div class="workPanel">
-            <ul>
+            <ul class="orderList">
             </ul>
         </div>
     </main>
