Подключение к mongodb, удаление orders.json

--- a/client/index.html
+++ b/client/index.html
@@ -54,7 +54,7 @@
             <button class="addOrder">Добавить заявку</button>
         </div>
         <div class="workPanel">
-            <ul class="orderList">
+            <ul class="ordersList">
             </ul>
         </div>
     </main>
