Добавлен websocket для мониторинга новых заявок

--- a/client/index.html
+++ b/client/index.html
@@ -51,7 +51,7 @@
             </ul>
         </div>
         <div class="activePanel">
-            <button class="addOrder">Добавить заявку</button>
+            <button class="addNewOrder">Добавить заявку</button>
         </div>
         <div class="workPanel">
             <ul class="ordersList">
