--- a/client/index.html
+++ b/client/index.html
@@ -3,9 +3,11 @@
 
 <head>
     <title>ServiceDesk 1.0</title>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/leftPanel.css">
     <link rel="stylesheet" href="fonts/leftPanel/styleicon.css">
+
 </head>
 
 <body>
@@ -50,12 +52,24 @@
                 </li>
             </ul>
         </div>
-        <div class="activePanel">
+        <!-- <div class="activePanel">
             <button class="addNewOrder">Добавить заявку</button>
-        </div>
+        </div> -->
         <div class="workPanel">
-            <ul class="ordersList">
-            </ul>
+            <table id="table_id" class="display hover nowrap">
+                <thead>
+                    <tr>
+                        <th>№ заявки</th>
+                        <th>Дата</th>
+                        <th>Описание</th>
+                        <th>Заказчик</th>
+                        <th>Специалист</th>
+                        <th>Статус</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
         </div>
     </main>
     <footer>
@@ -64,7 +78,8 @@
         </div> -->
     </footer>
     <script src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="javascripts/app.js"></script>    
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.js"></script>
+    <script src="javascripts/app.js"></script>
 </body>
 
 </html>
